[package]
name = "brtt"
description = "Better RTT (Real-Time Transfer) client"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michal Bogdziewicz <michal@bogdziewicz.xyz>"]

[dependencies]
env_logger = "0.11"
probe-rs = "0.29.0"
anyhow = "1.0"
async-io = "2.0"
clap = { version = "4", features = ["cargo", "derive"] }
crossterm = "0.27.0"
